--- a/index.html
+++ b/index.html
@@ -1,35 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="src/css/output.css">
   
   <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <main>
+    <header class="mx-36 my-6">
+      <nav class="flex justify-between items-center">
+        <div class="flex items-center">
+          <img src="src/images/logo.svg" alt="logo" class="pr-10">
+          <div class="flex gap-x-6">
+            <a href="">Features</a>
+            <a href="">Pricing</a>
+            <a href="">Resources</a>
+          </div>
+        </div>
 
-  Features
-  Pricing
-  Resources
+        <div class="flex gap-x-6 items-center">
+          <a href="">Login</a>
+          <a href="" class="bg-blue-400 text-white p-2.5 w-30 text-center rounded-3xl">Sign Up</a>
+        </div>
+      </nav>
+    </header>
 
-  Login
-  Sign Up
+    <section class="home mx-36 mt-36 flex items-center justify-between">
+      <div class="flex flex-col">
+        <h1 class="font-bold text-8xl text-gray-900 pb-2.5">
+          More than just <br> shorter links
+        </h1>
 
-  More than just shorter links
+        <p class="text-3xl/normal text-gray-500 font-medium mb-10">
+          Build your brand’s recognition and get detailed <br> insights on how your links are performing.
+        </p>
 
-  Build your brand’s recognition and get detailed insights 
-  on how your links are performing.
+        <a href="" class="bg-blue-400 p-2.5 w-30 text-center text-white rounded-3xl">Get Started</a>
+      </div>
 
-  Get Started
+      <div>
+        <img src="src/images/illustration-working.svg" alt="ilustracao working">
+      </div>
+    </section>
+
+  </main>
+  
+  
+  
+
+  
+
+
+  <!-- 
+
+  
+
+
   
   Shorten a link here...
 
@@ -76,7 +105,7 @@
   About
   Our Team
   Careers
-  Contact
+  Contact -->
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
