Iniciando nova secao

--- a/index.html
+++ b/index.html
@@ -46,6 +46,48 @@
       </div>
     </section>
 
+    <section class="flex items-center flex-col bg-gray-400 py-10">
+      <div class="mx-36 flex flex-col items-center">
+        <h2 class="text-gray-900 font-bold text-4xl mb-6">Advanced Statistics</h2>
+        <p class="text-center text-gray-500 mb-6">
+          Track how your links are performing across the web with <br>
+          our advanced statistics dashboard.
+        </p>
+      </div>
+
+      <div class="flex gap-6 flex-wrap items-center justify-center">
+        <div class="flex basis-64 flex-col gap-y-5 bg-white p-6 rounded-2xl">
+          <div>
+            <img src="src/images/icon-brand-recognition.svg" alt="">
+          </div>
+          <h3>Brand Recognition</h3>
+          <p>
+            Boost your brand recognition with each click. Generic links don’t mean a thing. Branded links help instil confidence in your content.
+          </p>
+        </div>
+        
+        <div class="flex basis-64 flex-col gap-y-5 bg-white p-6 rounded-2xl">
+          <div>
+            <img src="src/images/icon-brand-recognition.svg" alt="">
+          </div>
+          <h3>Brand Recognition</h3>
+          <p>
+            Boost your brand recognition with each click. Generic links don’t mean a thing. Branded links help instil confidence in your content.
+          </p>
+        </div>
+
+        <div class="flex basis-64 flex-col gap-y-5 bg-white p-6 rounded-2xl">
+          <div>
+            <img src="src/images/icon-brand-recognition.svg" alt="">
+          </div>
+          <h3>Brand Recognition</h3>
+          <p>
+            Boost your brand recognition with each click. Generic links don’t mean a thing. Branded links help instil confidence in your content.
+          </p>
+        </div>
+      </div>
+    </section>
+
   </main>
   
   
@@ -55,24 +97,17 @@
 
 
   <!-- 
-
-  
-
-
-  
-  Shorten a link here...
+Shorten a link here...
 
   Shorten It!
 
-  Advanced Statistics
+  
 
-  Track how your links are performing across the web with our 
-  advanced statistics dashboard.
+  
 
-  Brand Recognition
+  
 
-  Boost your brand recognition with each click. Generic links don’t 
-  mean a thing. Branded links help instil confidence in your content.
+  
 
   Detailed Records
 
